fixed dropdown menu spacing, click button spacing, card image spacing, rearranged css, added comments on HTML

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -51,6 +51,10 @@ body {
     margin: 30px 50px 0 0;
 }
 
+#links {
+    margin-right: 100px;
+}
+
 /* CONTENT */
 #card-container {
     display: flex;
